# job-orchestrator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  coverage.yml  docker-pr.yml  docker-publish.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  troubleshooting.md
docs/src/api/: client-endpoints.md  server-endpoints.md
docs/src/architecture/: job-lifecycle.md  overview.md  server-client.md
docs/src/configuration/: client.md  quotas.md  server.md
docs/src/deployment/: docker.md  kubernetes.md  production.md
docs/src/development/: building.md  contributing.md  testing.md
docs/src/getting-started/: first-job.md  installation.md  partial-downloads.md  quick-start.md
example/: cancel_job_example.sh  partial_download_example.sh  run.sh  start_example.sh
kubernetes/: client-deployment.yaml  client-service.yaml  configmap.yaml  network-policy.yaml  persistent-volume-claims.yaml  server-deployment.yaml  server-service.yaml
slides/: Makefile  README.md  slides.typ
src/: main.rs
src/config/: loader.rs
src/controllers/: client.rs  health.rs  mod.rs  orchestrator.rs  server.rs
src/datasource/: db.rs  fs.rs
src/models/: body_dao.rs  health_dto.rs  job_dao.rs  job_dto.rs  mod.rs  payload_dao.rs  payload_dto.rs  ping_dto.rs  queue_dao.rs  queue_dto.rs  status_body.rs  status_dto.rs
src/routes/: router.rs
src/services/: client.rs  endpoint.rs  mod.rs  orchestrator.rs  server.rs  tasks.rs
src/utils/: io.rs  mod.rs  sys.rs
