[package]
name = "job-orchestrator"
version = "2.0.0"
edition = "2024"
description = "Asynchronous job orchestrator for managing and routing payloads between services and computing resources with quota tracking"
authors = ["Rodrigo V. Honorato <rvhonorato@protonmail.com>"]
license = "MIT"
repository = "https://github.com/rvhonorato/job-orchestrator"
keywords = [
  "async",
  "job-scheduler",
  "scientific-computing",
  "resource-management",
  "queue",
]
categories = ["asynchronous", "science", "web-programming"]
readme = "README.md"

[dependencies]
anyhow = "1"
axum = { version = "0", features = ["multipart"] }
bytes = "1"
futures = "0.3"
http = "1.2"
hyper = { version = "1", features = ["full"] }
mockall = "0"
mockito = "1"
reqwest = { version = "0", default-features = false, features = [
  "multipart",
  "stream",
  "json",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
sqlx = { version = "0", default-features = false, features = [
  "runtime-tokio-rustls",
  "any",
  "sqlite",
  "macros",
  "migrate",
] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
  "full",
  "test-util",
  "macros",
  "rt-multi-thread",
] }
tokio-stream = "0"
tokio-util = { version = "0", features = ["io"] }
tokio_schedule = "0"
tower = { version = "0", features = ["util"] }
tower-http = { version = "0", features = ["trace"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = "8"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
futures-util = "0"
regex = "1"
sysinfo = "0"
